src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwF1000-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: F1000\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1000 × 688, bounds: 1239 × 688, states: []
size: 1000 × 688, bounds: 1239 × 688, states: [Activated]
